--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,6 @@ jobs:
         run: |
           npm run compile
 
-      - name: Run lint
+      - name: Run tests
         run: |
-          npm run lint
+          npm test
