--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,13 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: |
-          npm ci
+        run: npm ci
+        working-directory: vscode
 
       - name: Compile TypeScript
-        run: |
-          npm run compile
+        run: npm run compile
+        working-directory: vscode
 
       - name: Run tests
-        run: |
-          npm test
+        run: npm test
+        working-directory: vscode
