--- a/vscode/package.json
+++ b/vscode/package.json
@@ -1,15 +1,21 @@
 {
   "name": "quiklog",
   "displayName": "QuikLog",
-  "description": "",
-  "version": "0.0.1",
+  "description": "Quickly insert log statements in (almost) any language.",
+  "version": "1.0.0",
   "engines": {
-    "vscode": "^1.104.0"
+    "vscode": "^1.50.0"
+  },
+  "publisher": "codeygallup",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codeygallup/QuikLog"
   },
   "categories": [
     "Other"
   ],
   "activationEvents": [
+    "onCommand:quiklog.insertLog",
     "onLanguage:javascript",
     "onLanguage:typescript",
     "onLanguage:python",
@@ -50,7 +56,7 @@
     "test": "mocha -r ts-node/register \"src/test/**/*.test.ts\""
   },
   "devDependencies": {
-    "@types/vscode": "^1.104.0",
+    "@types/vscode": "^1.50.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
