--- a/vscode/.vscodeignore
+++ b/vscode/.vscodeignore
@@ -6,7 +6,7 @@ out/
 # VS Code workspace settings
 .vscode/
 
-# Node modules (you only want your dependencies listed in package.json)
+# Node modules
 node_modules/
 
 # Miscellaneous
