--- a/vscode/package.json
+++ b/vscode/package.json
@@ -3,6 +3,8 @@
   "displayName": "QuikLog",
   "description": "Quickly insert log statements in (almost) any language.",
   "version": "1.0.0",
+  "license": "MIT",
+  "icon": "images/icon-large.png",
   "engines": {
     "vscode": "^1.50.0"
   },
@@ -11,7 +13,23 @@
     "type": "git",
     "url": "https://github.com/codeygallup/QuikLog"
   },
-  "categories": ["Other"],
+  "bugs": {
+    "url": "https://github.com/codeygallup/QuikLog/issues"
+  },
+  "homepage": "https://github.com/codeygallup/QuikLog#readme",
+  "keywords": [
+    "log",
+    "console",
+    "debug",
+    "logging",
+    "print",
+    "console.log",
+    "productivity"
+  ],
+  "categories": [
+    "Debuggers",
+    "Other"
+  ],
   "activationEvents": [
     "onCommand:quiklog.insertLog",
     "onLanguage:javascript",
@@ -32,6 +50,7 @@
       {
         "command": "quiklog.insertLog",
         "key": "ctrl+alt+l",
+        "mac": "cmd+alt+l",
         "when": "editorTextFocus"
       }
     ],
