Fixing Gherkin file name issue

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -36,7 +36,7 @@
     "onLanguage:typescript",
     "onLanguage:python",
     "onLanguage:java",
-    "onLanguage:feature"
+    "onLanguage:gherkin"
   ],
   "main": "./out/extension.js",
   "contributes": {
